<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.account_info.AccountInfoFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/title_account"
        android:textAlignment="center"
        android:textColor="@color/text_main"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_account_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/hint_email"
        android:textAlignment="center"
        android:textColor="@color/text_main"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/title_change_password"
        android:textColor="@color/text_main"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_account_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_account_info_old_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:clipToPadding="false"
        android:hint="@string/hint_old_password"
        android:padding="0dp"
        android:textColorHint="@color/text_main"
        app:boxBackgroundColor="@color/input_bg"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/input_layout_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/input_layout_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/input_layout_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/input_layout_corner_radius"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <EditText
            android:id="@+id/et_account_info_old_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:fontFamily="@font/inter_medium"
            android:inputType="textPassword"
            android:textColor="@color/text_main"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_account_info_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="9dp"
        android:clipToPadding="false"
        android:hint="@string/hint_new_password"
        android:padding="0dp"
        android:textColorHint="@color/text_main"
        app:boxBackgroundColor="@color/input_bg"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/input_layout_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/input_layout_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/input_layout_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/input_layout_corner_radius"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_account_info_old_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <EditText
            android:id="@+id/et_account_info_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:fontFamily="@font/inter_medium"
            android:inputType="textPassword"
            android:textColor="@color/text_main"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="49dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/text_change"
        android:textColor="@color/background"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_account_info_new_password" />

    <Button
        android:id="@+id/btn_log_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/text_log_out"
        android:textColor="@color/background"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>