<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.team.TeamFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_team_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_team"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <TextView
                android:id="@+id/about_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/about_team"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/mobile"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_mobile"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingTop="8dp"
                android:paddingEnd="20dp"
                android:paddingBottom="8dp"
                android:text="@string/mobile"
                android:textColor="@color/background"
                app:layout_constraintEnd_toEndOf="@+id/frontend"
                app:layout_constraintHorizontal_bias="0.512"
                app:layout_constraintStart_toStartOf="@+id/frontend"
                app:layout_constraintTop_toBottomOf="@+id/frontend" />

            <TextView
                android:id="@+id/backend"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_backend"
                android:paddingStart="20dp"
                android:paddingTop="8dp"
                android:paddingEnd="20dp"
                android:paddingBottom="8dp"
                android:text="@string/backend"
                android:textColor="@color/background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/frontend"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_frontend"
                android:paddingStart="20dp"
                android:paddingTop="8dp"
                android:paddingEnd="20dp"
                android:paddingBottom="8dp"
                android:text="@string/frontend"
                android:textColor="@color/background"
                app:layout_constraintEnd_toEndOf="@+id/backend"
                app:layout_constraintStart_toStartOf="@+id/backend"
                app:layout_constraintTop_toBottomOf="@+id/backend" />

            <TextView
                android:id="@+id/backend_users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="TextView"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/backend"
                app:layout_constraintStart_toEndOf="@+id/backend"
                app:layout_constraintTop_toTopOf="@+id/backend" />

            <TextView
                android:id="@+id/frontend_users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="TextView"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/frontend"
                app:layout_constraintStart_toEndOf="@+id/frontend"
                app:layout_constraintTop_toTopOf="@+id/frontend" />

            <TextView
                android:id="@+id/mobile_users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="TextView"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/mobile"
                app:layout_constraintStart_toEndOf="@+id/mobile"
                app:layout_constraintTop_toTopOf="@+id/mobile" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:id="@+id/stack_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/stack"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/stack_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="TextView"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/stack_text"
                app:layout_constraintStart_toEndOf="@+id/stack_text"
                app:layout_constraintTop_toTopOf="@+id/stack_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>